--- a/views/tictactoe.erb
+++ b/views/tictactoe.erb
@@ -1,3 +1,3 @@
-<h2>Welcome to TTTBoard</h2>
+<h2></h2>
 
-<h3>Choose from the menu on the left to indentify which of game you'd like to play</h3>
+<h3>Choose from [Human Section] to play your choice</h3>
