--- a/views/display_result.erb
+++ b/views/display_result.erb
@@ -1,19 +1,19 @@
 <h3><%= game_msg %></h3>
 
-<table class ="col-9">
+<table id='board'>
     <tr>
-        <td class ="bottom right"><%= board[0] %></td>
-        <td class ="bottom right"><%= board[1] %></td>
-        <td class ="bottom"><%= board[2] %></td>
+        <td id='top-left'><%= board[0] %></td>
+        <td id='top-center'><%= board[1] %></td>
+        <td id='top-right'><%= board[2] %></td>
     </tr>
     <tr>
-        <td class ="bottom right"><%= board[3] %></td>
-        <td class ="bottom right"><%= board[4] %></td>
-        <td class ="bottom"><%= board[5] %></td>
+        <td id='middle-left'><%= board[3] %></td>
+        <td id='center'><%= board[4] %></td>
+        <td id='middle-right'><%= board[5] %></td>
     </tr>
     <tr>
-        <td class ="right"><%= board[6] %></td>
-        <td class ="right"><%= board[7] %></td>
-        <td class ="right"><%= board[8] %></td>
+        <td id='bottom-left'><%= board[6] %></td>
+        <td id='bottom-center'><%= board[7] %></td>
+        <td id='bottom-right'><%= board[8] %></td>
     </tr>
 </table>
