--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,19 +22,17 @@ body {
 	font-size: 30px;
     border: none;
 }
+
 form {
 	text-align: center;
 	display: inline-block;
 	margin-top: 30px
 }
-.bottom_bar {
-	bottom: 0;
-	left: 0;
-	right: 0;
-	position: absolute;
-	text-align: center;
-	background-color: grey;
-}
+
 footer {
 	text-align: center;
+	margin: 0;
+	padding-top: 30px;
+	padding-bottom: 25px;
+	background-color: grey;
 }
