--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-header {
+/*header {
 	text-align: center;
 }
 body {
@@ -35,4 +35,4 @@ footer {
 	padding-top: 30px;
 	padding-bottom: 25px;
 	background-color: grey;
-}
+}*/
