--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
     </header>
 
     <body>
-        <div class='center'>
+        <div class='table'>
         <div id='board'>
         <ul>
             <li class="bold"><h3>Human Section</h3></li>
