--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,65 @@
 body {
-	background-color: powderblue;
+	background-image: url("nature.jpeg");
+	background-position: center center;
+	background-attachment: fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
-header {
-	color: grey;
+* {
+	margin: 0;
+	padding: 0;
+}
+.wrapper  {
+	padding: 2em;
+	margin: 0 auto;
+	width: 1100px;
+	height: 660px;
+	background-color: #FFF;
+	background-repeat: no-repeat;
+	border-radius: 70px 70px 70px 70px;
+	background: linear-gradient(white, black);
+	opacity: 0.9;
+}
+hr {
+	border-style: solid;
+}
+.topic {
+	color: black;
+	background-color: orange;
 	text-align: center;
+	bottom: 600px;
+	border-radius: 10px 10px 0px 10px;
+}
+h1 {
+	font-size: 40px;
+	margin-bottom: 0;
+	text-shadow: 4px 4px 5px red;
+	line-height: 90px;
+}
+a {
+	color: darkgreen;
+    font-size: 1.2em;
+}
+li {
+	margin-left: 20px;
+}
+.logo {
+	height: 90px;
+	width: 90px;
+    position: absolute;
+    top: 0px;
+    bottom: 575px;
+    margin: auto;
+    margin-left: 0px;
+    transition: left linear 0.2s, width linear 0.2s, height linear 0.2s, transform linear 0.2s;
+}
+.logo:hover {
+/*	left: 25px;
+	width: 85px;
+	height: 85px;*/
+	-webkit-transform: rotate(360deg);
 }
 .board-data {
 	width: 100px;
@@ -13,36 +69,37 @@ header {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+	border: 3px;
 }
-#board {
+#board {              
 	padding: 0px;
 	margin: 0 auto;
-	margin-top: 100px;
+	margin-top: 0px;
 }
-#board tr td {
+.bold {
+	color: blue;
+}
+#board tr td {        
 	width: 100px;
 	height: 100px;
-	border: 1px solid;
-	font-size: 50px;
+	border: 3px solid;
+	font-size: 3em;
 	text-align: center;
 } 
 #board tr td:hover {
 	background: blue;
 	cursor: pointer;
 }
-.bottom_bar {
-	bottom: 0;
-	left: 0;
-	right: 0;
-	text-align: center;
-	background-color: grey;
-}
-
-.footer {
-	text-align: center;
-}
-form {
+/*form {
 	table-layout: center;
 	width: 100px
 	height: 100px;
+	font-size: 3em;*/
 }
+/*.footer {
+	text-align: center;
+	padding-top: 1px;
+	border: 1px solid;
+	margin-top: 40px;
+	background-color: #cccccc;
+}*/
