--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,10 +21,9 @@
                 <a href="/"><h3>Reset</h3></a>
             </ul>
             <div>
-            </div>
             <%= yield %>
             </div>
-           <!--  <div class="footer">TTTBoard.org</div> -->
+            <footer><center>TTTBoard.org</center></footer>
         </div>
         </div>
     </body>
