--- a/views/tictactoe.erb
+++ b/views/tictactoe.erb
@@ -1,10 +1,10 @@
 <h3>Choose from [HUMAN SECTION] to play your choice</h3><br>
-<p>Player1, Enter your name:</p>
+<!-- <p>Player1, Enter your name:</p>
+
 <form action ="name" method ="post">
-    
     <input type ="text" name ="Player1" autofocus="autofocus" placeholder="Enter your name">
-    <input type ="submit">
-</form>
+    <input type ="Submit">
+</form> -->
 <table id='board'>
     <tr>
         <td id='top-left'><%= board[0] %></td>
