--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
             <div>
             <%= yield %>
             </div>
-            <footer><center>TTTBoard.org</center></footer>
+            <footer><center>TeelaTTTBoard.org</center></footer>
         </div>
         </div>
     </body>
