--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,10 +13,10 @@
             <br>
             <ul>
                 <l class="bold"><h2>Human Section</h2></l>
-                <li><a id ="pp" href="/playervsplayer">Player vs Player</a></li><p>
-                <li><a id ="ps" href="/playervsseq">Player vs Easy</a></li><p>
-                <li><a id ="pr" href="/playervsrandom">Player vs Medium</a></li><p>
-                <li><a id ="pu" href="/playervsunbeatable">Player vs Hard</a></li><br>
+                <li><a id ="pp" href="/playervsplayer">Player vs Player</a></li>
+                <li><a id ="ps" href="/playervsseq">Player vs Easy</a></li>
+                <li><a id ="pr" href="/playervsrandom">Player vs Medium</a></li>
+                <li><a id ="pu" href="/playervsunbeatable">Player vs Impossible</a></li>
                 <l class="bold"><h2>Play Again</h2></l>
                 <a href="/"><h3>Reset</h3></a>
             </ul>
