--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
-<html lang='en'>
-    <head>
-        <meta charset="UTF-8">
-        <title>App TicTacToe</title>
-        <link href ="css/styles.css" rel ="stylesheet">
-    </head>
-    <body>
-        <div class ="wrapper">
-            <img class ="logo" css/src="ttt.png"> 
-            <h1 class ="topic">Wellcome To TicTacToe</h1>
-            <hr><hr>
-            <br>
-            <ul>
-                <l class="bold"><h2>Human Section</h2></l>
-                <li><a id ="pp" href="/playervsplayer">Player vs Player</a></li>
-                <li><a id ="ps" href="/playervsseq">Player vs Easy</a></li>
-                <li><a id ="pr" href="/playervsrandom">Player vs Medium</a></li>
-                <li><a id ="pu" href="/playervsunbeatable">Player vs Impossible</a></li>
-                <l class="bold"><h2>Play Again</h2></l>
-                <a href="/"><h3>Reset</h3></a>
-            </ul>
-            <div>
-            <%= yield %>
+    <html lang='en'>
+        <head>
+            <title>Teela Tictactoe</title>
+            <link rel="shortcut icon" href="img/tela.PNG" />
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link href ="css/styles.css" rel ="stylesheet">
+            <!--font awesome cdnlink-->
+            <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+            <!--wow.js cdn link-->
+            <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="    sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+            <!--animate.css-->
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+           <!--  Optional theme -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="    sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+            </head>
+        <body>
+         <!--Header -->
+            <div id="header" class="header">
+                <div class="container">
+                    <div class="row">
+                        <h1 class ="topic">Wellcome To TicTacToe</h1>
+                    </div>
+                </div>
             </div>
-            <footer><center>TeelaTTTBoard.org</center></footer>
-        </div>
-        </div>
-    </body>
-</html>
+        <!--End Header -->
+            <div id="options" class="options">
+                <div class="container">
+                    <div class="row">
+                        <l class="bold"><h2>Human Section</h2></l>
+
+                        <ul>
+                            <li><a id ="pp" href="/playervsplayer">Player vs Player</a></li>
+                            <li><a id ="ps" href="/playervsseq">Player vs Easy</a></li>
+                            <li><a id ="pr" href="/playervsrandom">Player vs Medium</a></li>
+                            <li><a id ="pu" href="/playervsunbeatable">Player vs Impossible</a></li>
+                            <l class="bold"><h2>Play Again</h2></l>
+                            <a href="/"><h3>Reset</h3></a>
+                        </ul>
+        
+                    <div>
+                        <%= yield %>
+                    </div>
+
+            <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+            <!-- Include all compiled plugins (below), or include individual files as needed -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+            <script src="js/wow.min.js"></script>
+            <script>
+                new WOW().init();
+            </script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+            <!--footer-->
+            <div id="footer" class="footer">
+                <div class="container">
+                    <p>Design By Teela Ram Subba, Copyright &copy; 2017</p>
+                </div>
+            </div>
+        </body>
+    </html>
