--- a/views/display_win.erb
+++ b/views/display_win.erb
@@ -1,19 +1,19 @@
 <h3><%= game_msg %></h3>
 
 <table id='board'>
-    <tr>
-        <td id='top-left'><%= board[0] %></td>
-	    <td id='top-center'><%= board[1] %></td>
-        <td id='top-right'><%= board[2] %></td>
+    <tr id="row1">
+        <td id='top-left' class="square"><%= board[0] %></td>
+	    <td id='top-center' class="square v"><%= board[1] %></td>
+        <td id='top-right' class="square"><%= board[2] %></td>
     </tr>
-    <tr>
-        <td id='middle-left'><%= board[3] %></td>
-        <td id='center'><%= board[4] %></td>
-        <td id='middle-right'><%= board[5] %></td>
+    <tr id="row2">
+        <td id='middle-left' class="square h"><%= board[3] %></td>
+        <td id='center' class="square v h"><%= board[4] %></td>
+        <td id='middle-right' class="square h"><%= board[5] %></td>
     </tr>
-    <tr>
-        <td id='bottom-left'><%= board[6] %></td>
-        <td id='bottom-center'><%= board[7] %></td>
-        <td id='bottom-right'><%= board[8] %></td>
+    <tr id="row3">
+        <td id='bottom-left' class="square"><%= board[6] %></td>
+        <td id='bottom-center' class="square v"><%= board[7] %></td>
+        <td id='bottom-right' class="square"><%= board[8] %></td>
     </tr>
 </table>
