--- a/views/get_random.erb
+++ b/views/get_random.erb
@@ -5,19 +5,19 @@
 </form>
 
 <table id='board'>
-    <tr>
-        <td id='top-left'><%= board[0] %></td>
-        <td id='top-center'><%= board[1] %></td>
-        <td id='top-right'><%= board[2] %></td>
+    <tr id="row1">
+        <td class="square"><%= board[0] %></td>
+        <td class="square v"><%= board[1] %></td>
+        <td class="square"><%= board[2] %></td>
     </tr>
-    <tr>
-        <td id='middle-left'><%= board[3] %></td>
-        <td id='center'><%= board[4] %></td>
-        <td id='middle-right'><%= board[5] %></td>
+    <tr id="row2">
+        <td class="square h"><%= board[3] %></td>
+        <td class="square v h"><%= board[4] %></td>
+        <td class="square h"><%= board[5] %></td>
     </tr>
-    <tr>
-        <td id='bottom-left'><%= board[6] %></td>
-        <td id='bottom-center'><%= board[7] %></td>
-        <td id='bottom-right'><%= board[8] %></td>
+    <tr id="row3">
+        <td class="square"><%= board[6] %></td>
+        <td class="square v"><%= board[7] %></td>
+        <td class="square"><%= board[8] %></td>
     </tr>
 </table>
