--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,16 +31,14 @@
                 <div class="container">
                     <div class="row">
                         <l class="bold"><h2>Human Section</h2></l>
-
-                        <ul>
-                            <li><a id ="pp" href="/playervsplayer">Player vs Player</a></li>
-                            <li><a id ="ps" href="/playervsseq">Player vs Easy</a></li>
-                            <li><a id ="pr" href="/playervsrandom">Player vs Medium</a></li>
-                            <li><a id ="pu" href="/playervsunbeatable">Player vs Impossible</a></li>
+                        <ul class="list-group">
+                            <li><a id ="pp" class="list-group-item list-group-item-warning" href="/playervsplayer">Player vs Player</a></li>
+                            <li><a id ="ps" class="list-group-item list-group-item-success" href="/playervsseq">Player vs Easy</a></li>
+                            <li><a id ="pr" class="list-group-item list-group-item-info" href="/playervsrandom">Player vs Medium</a></li>
+                            <li><a id ="pu" class="list-group-item list-group-item-danger" href="/playervsunbeatable">Player vs Impossible</a></li>
                             <l class="bold"><h2>Play Again</h2></l>
                             <a href="/"><h3>Reset</h3></a>
-                        </ul>
-        
+                        </ul>       
                     <div>
                         <%= yield %>
                     </div>
@@ -56,10 +54,10 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
             <!--footer-->
-            <div id="footer" class="footer">
+           <!--  <div id="footer" class="footer">
                 <div class="container">
                     <p>Design By Teela Ram Subba, Copyright &copy; 2017</p>
                 </div>
-            </div>
+            </div> -->
         </body>
     </html>
