--- a/views/get_random.erb
+++ b/views/get_random.erb
@@ -1,4 +1,4 @@
-<h3><%= game_msg %></h3>
+<!-- <h3><%= game_msg %></h3> -->
 
 <form method="post" action="get_random_move">
 <input class="aisubmit" type="submit" name="submit" value="Make a Move">
