--- a/views/tictactoe.erb
+++ b/views/tictactoe.erb
@@ -1,24 +1,28 @@
-<h3>Choose from [HUMAN SECTION] to play your choice</h3><br>
-<!-- <p>Player1, Enter your name:</p>
+<!DOCTYPE html>
+<html>
+    <body>
+        <table id='board'>
+            <tr id="row1">
+                <td class="square"><%= board[0] %></td>
+                <td class="square v"><%= board[1] %></td>
+                <td class="square"><%= board[2] %></td>
+            </tr>
+            <tr id="row2">
+                <td class="square h"><%= board[3] %></td>
+                <td class="square v h"><%= board[4] %></td>
+                <td class="square h"><%= board[5] %></td>
+            </tr>
+            <tr id="row3">
+                <td class="square"><%= board[6] %></td>
+                <td class="square v"><%= board[7] %></td>
+                <td class="square"><%= board[8] %></td>
+            </tr>
+        </table>
+    </body>
+</html>
 
+<!--<p>Player1, Enter your name:</p>
 <form action ="name" method ="post">
     <input type ="text" name ="Player1" autofocus="autofocus" placeholder="Enter your name">
     <input type ="Submit">
 </form> -->
-<table id='board'>
-    <tr>
-        <td id='top-left' class="square"><%= board[0] %></td>
-        <td id='top-center' class="square v"><%= board[1] %></td>
-        <td id='top-right' class="square"><%= board[2] %></td>
-    </tr>
-    <tr>
-        <td id='middle-left' class="square h"><%= board[3] %></td>
-        <td id='center' class="square v h"><%= board[4] %></td>
-        <td id='middle-right' class="square h"><%= board[5] %></td>
-    </tr>
-    <tr>
-        <td id='bottom-left' class="square"><%= board[6] %></td>
-        <td id='bottom-center' class="square v"><%= board[7] %></td>
-        <td id='bottom-right' class="square"><%= board[8] %></td>
-    </tr>
-</table>
