--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,6 +97,13 @@ a:active {
 	text-decoration: none;
 	color: #000000;
 }
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+    .tooltip {
+        display: none !important;
+    }
+ }
 
 
 
