Adding game rules

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,7 +28,7 @@
         <!--End Header -->
             <div class="rules" id="rules">
               <ul class="list-inline">
-                <a href="#" data-toggle="tooltip" data-placement="bottom" title="The object of Tic Tac Toe is to get three in a row. You play on a three by three game board. The first player is known as X and the second is O. Players alternate placing Xs and Os on the game board until either oppent has three in a row or all nine squares are filled. X always goes first, and in the event that no one has three in a row, the stalemate is called a cat game.">Game Rules</a>
+                <a href="#" data-toggle="popover" data-placement="bottom" title="Rules" data-content="The object of Tic Tac Toe is to get three in a row. You play on a three by three game board. The first player is known as X and the second is O. Players alternate placing Xs and Os on the game board until either oppent has three in a row or all nine squares are filled. X always goes first, and in the event that no one has three in a row, the stalemate is called a cat game.">Game Rules</a>
             </ul>
          </div>
          </div>
@@ -62,7 +62,7 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
             <script>
                 $(document).ready(function(){
-                    $('[data-toggle="tooltip"]').tooltip();   
+                    $('[data-toggle="popover"]').popover();   
                 });
             </script>
         </body>
