--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,9 +20,10 @@
         <body>
          <!--Header -->
             <div id="header" class="header">
+                <a href="http://teelasubba.herokuapp.com/"><img class="image" src="img/Home.jpg"></a>
                 <div class="container">
                     <div class="row">
-                        <h1 class ="topic">Wellcome To TicTacToe</h1><hr>
+                        <h1 class ="topic">Wellcome To TicTacToe</h1><hr>  
                     </div>
                 </div>
         <!--End Header -->
