--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,7 +20,7 @@
         <body>
          <!--Header -->
             <div id="header" class="header">
-                <a href="http://teelasubba.herokuapp.com/"><img class="image" src="img/Home.jpg"></a>
+                <a href="http://teelasubba.herokuapp.com/"><img class="image" src="img/Home.jpg" height=100px width=100px></a>
                 <div class="container">
                     <div class="row">
                         <h1 class ="topic">Wellcome To TicTacToe</h1><hr>  
