--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
+             <link rel="shortcut icon" href="img/favicon.ico" />
             <link href ="css/styles.css" rel ="stylesheet">
             <!--font awesome cdnlink-->
             <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
