--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang='en'>
         <head>
-            <title>Teela Tictactoe</title>
+            <title>Tula Tictactoe</title>
             <link rel="shortcut icon" href="img/tela.PNG" />
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,6 @@
         <body>
          <!--Header -->
             <div id="header" class="header">
-                <a href="http://teelasubba.herokuapp.com/"><img class="image" src="img/Home.jpg" height=80px width=80px></a>
                 <div class="container">
                     <div class="row">
                         <h1 class ="topic">Wellcome To TicTacToe</h1><hr>  
@@ -34,6 +33,7 @@
             </ul>
          </div>
          </div>
+         <br>
             <div id="options" class="options">
                 <div class="container">
                     <div>
@@ -41,7 +41,6 @@
                     </div>
                     <hr>
                     <div class="select">
-                        <h3>Select to Play</h3>
                         <ul class="list-group">
                             <li><a id ="pp" class="list-group-item list-group-item-warning" href="/playervsplayer">Player vs Player</a></li>
                             <li><a id ="ps" class="list-group-item list-group-item-success" href="/playervsseq">Player vs Easy</a></li>
@@ -53,7 +52,6 @@
                 </div>
             </div>       
 
-            <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
             <!-- Include all compiled plugins (below), or include individual files as needed -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
