--- a/views/display_win.erb
+++ b/views/display_win.erb
@@ -19,7 +19,7 @@
     </tr>
   </table>
         <div>
-            <h3><%= game_msg %></h3> 
+          <p id="message"><%= game_msg %></p>
         </div>
     </body>
 </html>
