--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
             <div id="header" class="header">
                 <div class="container">
                     <div class="row">
-                        <h1 class ="topic">Wellcome To TicTacToe</h1><hr>  
+                        <h1 class ="topic">Wellcome To TicTacToe</h1> 
                     </div>
                 </div>
         <!--End Header -->
@@ -39,7 +39,6 @@
                     <div>
                         <%= yield %>
                     </div>
-                    <hr>
                     <div class="select">
                         <ul class="list-group">
                             <li><a id ="pp" class="list-group-item list-group-item-warning" href="/playervsplayer">Player vs Player</a></li>
